src/antlr_src/VypParser.py
# Generated from Vyp.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VypParser ( Parser ):

    grammarFileName = "Vyp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'{'", "'}'", "';'", 
                     "'='", "'return'", "'if'", "'else'", "'while'", "'!'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
                     "'||'", "'.'", "':'", "'class'", "'new'", "'int'", 
                     "'void'", "'string'", "'*'", "'/'", "'+'", "'-'", "'super'", 
                     "'this'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "NEW", 
                      "INT", "VOID", "STRING", "MULT", "DIV", "ADD", "SUB", 
                      "SUPER", "THIS", "ID", "INT_LIT", "STRING_LIT", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_function_def = 1
    RULE_var_type = 2
    RULE_ret_type = 3
    RULE_f_param_list = 4
    RULE_f_call_list = 5
    RULE_f_param_def = 6
    RULE_code_block = 7
    RULE_statement = 8
    RULE_declaration = 9
    RULE_var_assign = 10
    RULE_instance_assign = 11
    RULE_ret_stmt = 12
    RULE_if_else_stmt = 13
    RULE_if_cond = 14
    RULE_else_stmt = 15
    RULE_while_stmt = 16
    RULE_expr = 17
    RULE_fun_call = 18
    RULE_instance_creation = 19
    RULE_literal_val = 20
    RULE_first_instance_ref = 21
    RULE_instance_expr = 22
    RULE_nested_invocation = 23
    RULE_class_def = 24
    RULE_class_member = 25

    ruleNames =  [ "program", "function_def", "var_type", "ret_type", "f_param_list", 
                   "f_call_list", "f_param_def", "code_block", "statement", 
                   "declaration", "var_assign", "instance_assign", "ret_stmt", 
                   "if_else_stmt", "if_cond", "else_stmt", "while_stmt", 
                   "expr", "fun_call", "instance_creation", "literal_val", 
                   "first_instance_ref", "instance_expr", "nested_invocation", 
                   "class_def", "class_member" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    CLASS=23
    NEW=24
    INT=25
    VOID=26
    STRING=27
    MULT=28
    DIV=29
    ADD=30
    SUB=31
    SUPER=32
    THIS=33
    ID=34
    INT_LIT=35
    STRING_LIT=36
    WS=37
    LINE_COMMENT=38
    BLOCK_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VypParser.Function_defContext)
            else:
                return self.getTypedRuleContext(VypParser.Function_defContext,i)


        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VypParser.Class_defContext)
            else:
                return self.getTypedRuleContext(VypParser.Class_defContext,i)


        def getRuleIndex(self):
            return VypParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = VypParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [25, 26, 27, 34]:
                    self.state = 52
                    self.function_def()
                    pass
                elif token in [23]:
                    self.state = 53
                    self.class_def()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 17423138816) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ret_type(self):
            return self.getTypedRuleContext(VypParser.Ret_typeContext,0)


        def ID(self):
            return self.getToken(VypParser.ID, 0)

        def f_param_list(self):
            return self.getTypedRuleContext(VypParser.F_param_listContext,0)


        def code_block(self):
            return self.getTypedRuleContext(VypParser.Code_blockContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)




    def function_def(self):

        localctx = VypParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.ret_type()
            self.state = 59
            self.match(VypParser.ID)
            self.state = 60
            self.match(VypParser.T__0)
            self.state = 61
            self.f_param_list()
            self.state = 62
            self.match(VypParser.T__1)
            self.state = 63
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(VypParser.INT, 0)

        def STRING(self):
            return self.getToken(VypParser.STRING, 0)

        def ID(self):
            return self.getToken(VypParser.ID, 0)

        def getRuleIndex(self):
            return VypParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = VypParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17347641344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ret_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(VypParser.Var_typeContext,0)


        def VOID(self):
            return self.getToken(VypParser.VOID, 0)

        def getRuleIndex(self):
            return VypParser.RULE_ret_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet_type" ):
                listener.enterRet_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet_type" ):
                listener.exitRet_type(self)




    def ret_type(self):

        localctx = VypParser.Ret_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ret_type)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 27, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.var_type()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.match(VypParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def f_param_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VypParser.F_param_defContext)
            else:
                return self.getTypedRuleContext(VypParser.F_param_defContext,i)


        def VOID(self):
            return self.getToken(VypParser.VOID, 0)

        def getRuleIndex(self):
            return VypParser.RULE_f_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_param_list" ):
                listener.enterF_param_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_param_list" ):
                listener.exitF_param_list(self)




    def f_param_list(self):

        localctx = VypParser.F_param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_f_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 27, 34]:
                self.state = 71
                self.f_param_def()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 72
                    self.match(VypParser.T__2)
                    self.state = 73
                    self.f_param_def()
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [26]:
                self.state = 79
                self.match(VypParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_call_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VypParser.ExprContext)
            else:
                return self.getTypedRuleContext(VypParser.ExprContext,i)


        def getRuleIndex(self):
            return VypParser.RULE_f_call_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_call_list" ):
                listener.enterF_call_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_call_list" ):
                listener.exitF_call_list(self)




    def f_call_list(self):

        localctx = VypParser.F_call_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_f_call_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 133160767490) != 0):
                self.state = 82
                self.expr(0)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 83
                    self.match(VypParser.T__2)
                    self.state = 84
                    self.expr(0)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_param_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(VypParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(VypParser.ID, 0)

        def getRuleIndex(self):
            return VypParser.RULE_f_param_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_param_def" ):
                listener.enterF_param_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_param_def" ):
                listener.exitF_param_def(self)




    def f_param_def(self):

        localctx = VypParser.F_param_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_f_param_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.var_type()
            self.state = 93
            self.match(VypParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VypParser.StatementContext)
            else:
                return self.getTypedRuleContext(VypParser.StatementContext,i)


        def code_block(self):
            return self.getTypedRuleContext(VypParser.Code_blockContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)




    def code_block(self):

        localctx = VypParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_code_block)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(VypParser.T__3)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 133328542530) != 0):
                    self.state = 96
                    self.statement()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 102
                self.match(VypParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(VypParser.T__3)
                self.state = 104
                self.code_block()
                self.state = 105
                self.match(VypParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(VypParser.DeclarationContext,0)


        def var_assign(self):
            return self.getTypedRuleContext(VypParser.Var_assignContext,0)


        def instance_assign(self):
            return self.getTypedRuleContext(VypParser.Instance_assignContext,0)


        def expr(self):
            return self.getTypedRuleContext(VypParser.ExprContext,0)


        def ret_stmt(self):
            return self.getTypedRuleContext(VypParser.Ret_stmtContext,0)


        def if_else_stmt(self):
            return self.getTypedRuleContext(VypParser.If_else_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(VypParser.While_stmtContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = VypParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.declaration()
                self.state = 110
                self.match(VypParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.var_assign()
                self.state = 113
                self.match(VypParser.T__5)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.instance_assign()
                self.state = 116
                self.match(VypParser.T__5)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.expr(0)
                self.state = 119
                self.match(VypParser.T__5)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.ret_stmt()
                self.state = 122
                self.match(VypParser.T__5)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 124
                self.if_else_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 125
                self.while_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 126
                self.match(VypParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(VypParser.Var_typeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VypParser.ID)
            else:
                return self.getToken(VypParser.ID, i)

        def getRuleIndex(self):
            return VypParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = VypParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.var_type()
            self.state = 130
            self.match(VypParser.ID)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 131
                self.match(VypParser.T__2)
                self.state = 132
                self.match(VypParser.ID)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VypParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(VypParser.ExprContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_var_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_assign" ):
                listener.enterVar_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_assign" ):
                listener.exitVar_assign(self)




    def var_assign(self):

        localctx = VypParser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(VypParser.ID)
            self.state = 139
            self.match(VypParser.T__6)
            self.state = 140
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instance_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instance_expr(self):
            return self.getTypedRuleContext(VypParser.Instance_exprContext,0)


        def expr(self):
            return self.getTypedRuleContext(VypParser.ExprContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_instance_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstance_assign" ):
                listener.enterInstance_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstance_assign" ):
                listener.exitInstance_assign(self)




    def instance_assign(self):

        localctx = VypParser.Instance_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_instance_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.instance_expr()
            self.state = 143
            self.match(VypParser.T__6)
            self.state = 144
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ret_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(VypParser.ExprContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_ret_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet_stmt" ):
                listener.enterRet_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet_stmt" ):
                listener.exitRet_stmt(self)




    def ret_stmt(self):

        localctx = VypParser.Ret_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ret_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(VypParser.T__7)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 133160767490) != 0):
                self.state = 147
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_else_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_cond(self):
            return self.getTypedRuleContext(VypParser.If_condContext,0)


        def code_block(self):
            return self.getTypedRuleContext(VypParser.Code_blockContext,0)


        def else_stmt(self):
            return self.getTypedRuleContext(VypParser.Else_stmtContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_if_else_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_else_stmt" ):
                listener.enterIf_else_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_else_stmt" ):
                listener.exitIf_else_stmt(self)




    def if_else_stmt(self):

        localctx = VypParser.If_else_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_if_else_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.if_cond()
            self.state = 151
            self.code_block()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 152
                self.else_stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_condContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(VypParser.ExprContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_if_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_cond" ):
                listener.enterIf_cond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_cond" ):
                listener.exitIf_cond(self)




    def if_cond(self):

        localctx = VypParser.If_condContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_if_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(VypParser.T__8)
            self.state = 156
            self.match(VypParser.T__0)
            self.state = 157
            self.expr(0)
            self.state = 158
            self.match(VypParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code_block(self):
            return self.getTypedRuleContext(VypParser.Code_blockContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_else_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_stmt" ):
                listener.enterElse_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_stmt" ):
                listener.exitElse_stmt(self)




    def else_stmt(self):

        localctx = VypParser.Else_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_else_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(VypParser.T__9)
            self.state = 161
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(VypParser.ExprContext,0)


        def code_block(self):
            return self.getTypedRuleContext(VypParser.Code_blockContext,0)


        def getRuleIndex(self):
            return VypParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)




    def while_stmt(self):

        localctx = VypParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(VypParser.T__10)
            self.state = 164
            self.match(VypParser.T__0)
            self.state = 165
            self.expr(0)
            self.state = 166
            self.match(VypParser.T__1)
            self.state = 167
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return VypParser.RULE_expr
